Grace/tests/gibbs/errors/t132.grace
// ERROR = P1002
def 7 = 8
